language/move-lang/tests/move_check/typing/shadowing_invalid_scope.move
module 0x8675309::M {

    fun t0() {
        { let x = false; };
        (x: bool);
    }

}
